# numpy_project

./: CMakeLists.txt  README.md  meson.build  test  test.cpp
.github/workflows/: ci.yml
include/: crypto.hpp  logical.cpp  logical.hpp  math.cpp  math.hpp  matrix_operations.cpp  matrix_operations.hpp  parallel_for.cpp  parallel_for.hpp  shift.cpp  shift.hpp  simd_traits.cpp  simd_traits.hpp  sort.cpp  sort.hpp  utils.hpp  xsimd_traits.cpp  xsimd_traits.hpp
include/data_structure/: dtype_trait.cpp  dtype_trait.hpp  ndarray.cpp  ndarray.hpp
include/utils/: simd_algorithm.hpp  simd_operators.cpp  simd_operators.hpp  utils.cpp
src/: crypto.cpp  logical.cpp  math.cpp  matrix_operations.cpp  parallel_for.cpp  shift.cpp  simd_traits.cpp  sort.cpp  utils.cpp  xsimd_traits.cpp
src/data_structure/: ndarray.cpp
src/utils/: simd_algorithm.cpp  simd_operators.cpp  utils.cpp
test/: CMakeLists.txt  meson.build  run_all_tests.cpp  test_apply.hpp  test_basic_property.hpp  test_logical.hpp  test_math.hpp  test_matrix_operations.hpp  test_shift.hpp  test_sort.hpp
